# fsmda

./: .autotools  .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Makefile.am  NEWS  README  README.md  configure.ac  libfsmda.files  libfsmda.includes  maint.mk  sequence1.plantuml  sequence1proposal.plantuml  sequence2.plantuml  sequence2proposal.plantuml  sequence3.plantuml  sequence3proposal.plantuml  sequence4.plantuml  sequence4proposal.plantuml  websequence.txt
examples/: Makefile.am  example0.cpp  example1.cpp
external_deps/: CMakeLists.txt  gflags.cmake  glog.cmake  gtest.cmake
programs/: CMakeLists.txt  Makefile.am  example0.cc  example0.cpp
src/: CMakeLists.txt  Makefile.am  libfsmda.cpp  libfsmda.pc.in  libtemplate.cpp  libtemplate.pc.in
src/fsmda/: child_class_handler.cc  child_class_handler.cpp  child_class_handler.h  child_pairing_manager.cc  child_pairing_manager.h  child_paring_manager.cc  child_paring_manager.h  device_class_description.cc  device_class_description.cpp  device_class_description.h  device_description.cc  device_description.cpp  device_description.h  parent_class_handler.cc  parent_class_handler.cpp  parent_class_handler.h  parent_pairing_manager.cc  parent_pairing_manager.h  parent_paring_manager.cc  parent_paring_manager.h
src/fsmda/class_handling/: device_class_description.cc  device_class_description.h  device_description.cc  device_description.h
src/fsmda/communication/: communication_service_interface.h  upnp_active_ccm.cc  upnp_active_ccm.cpp  upnp_active_ccm.h  upnp_active_pcm.cc  upnp_active_pcm.cpp  upnp_active_pcm.h  upnp_mediacapture_ccm.cc  upnp_mediacapture_ccm.cpp  upnp_mediacapture_ccm.h  upnp_mediacapture_pcm.cc  upnp_mediacapture_pcm.h  upnp_ondemand_ccm.cc  upnp_ondemand_ccm.cpp  upnp_ondemand_ccm.h  upnp_ondemand_pcm.cc  upnp_ondemand_pcm.cpp  upnp_ondemand_pcm.h  upnp_passive_ccm.cc  upnp_passive_ccm.cpp  upnp_passive_ccm.h  upnp_passive_pcm.cc  upnp_passive_pcm.cpp  upnp_passive_pcm.h  upnp_service_cm_interface.h
src/fsmda/communication_services/: upnp_active_ccm.cc  upnp_active_ccm.h  upnp_active_pcm.cc  upnp_active_pcm.h  upnp_mediacapture_ccm.cc  upnp_mediacapture_ccm.h  upnp_mediacapture_pcm.cc  upnp_mediacapture_pcm.h  upnp_ondemand_ccm.cc  upnp_ondemand_ccm.h  upnp_ondemand_pcm.cc  upnp_ondemand_pcm.h  upnp_passive_ccm.cc  upnp_passive_ccm.h  upnp_passive_pcm.cc  upnp_passive_pcm.h
src/fsmda/gingancl/: child_paring_manager.cpp  child_paring_manager.h  parent_paring_manager.cpp  parent_paring_manager.h
src/fsmda/model/: active_object_interfaces.h  active_objects_api.h  class_handling_api.h  class_handling_interfaces.h  device_pairing_api.h  device_paring_interfaces.h  mediacapture_objects_api.h  ondemand_objects_api.h  passive_objects_api.h
src/fsmda/pairing/: pairing_service_interfaces.h  upnp_child_pairing.cc  upnp_child_pairing.h  upnp_parent_pairing.cc  upnp_parent_pairing.h
src/fsmda/pairing_services/: pairing_service_interface.h  pairing_service_interfaces.h  upnp_child_pairing.cc  upnp_child_pairing.h  upnp_parent_pairing.cc  upnp_parent_pairing.h
src/fsmda/paring/: child_paring_manager.cc  child_paring_manager.cpp  child_paring_manager.h  device_class_description.cc  device_class_description.h  device_description.cc  device_description.cpp  device_description.h  parent_paring_manager.cc  parent_paring_manager.cpp  parent_paring_manager.h  paring_service_interface.h  upnp_child_paring.cc  upnp_child_paring.h  upnp_parent_paring.cc  upnp_parent_paring.h
src/fsmda/paring_services/: paring_service_interface.h  upnp_child_paring.cc  upnp_child_paring.h  upnp_parent_paring.cc  upnp_parent_paring.h
src/fsmda/paringmanager/: child_paring_manager.cpp  child_paring_manager.h  device_class_description.cpp  device_class_description.h  device_description.cpp  device_description.h  parent_paring_manager.cpp  parent_paring_manager.h
src/fsmda/protocol/: upnp.cpp  upnp.h  upnp_manager.cpp  upnp_manager.h  upnpprotocol.cpp  upnpprotocol.h
src/fsmda/services/: upnp_service.cpp  upnp_service.h
src/fsmda/upnp/: communication_service_interface.h  upnp_active_ccm.cc  upnp_active_ccm.cpp  upnp_active_ccm.h  upnp_active_pcm.cc  upnp_active_pcm.cpp  upnp_active_pcm.h  upnp_child_pairing.cc  upnp_child_pairing.h  upnp_cpm.cc  upnp_cpm.cpp  upnp_cpm.h  upnp_fsmda_utils.cc  upnp_fsmda_utils.cpp  upnp_fsmda_utils.h  upnp_mediacapture_ccm.cc  upnp_mediacapture_ccm.cpp  upnp_mediacapture_ccm.h  upnp_mediacapture_pcm.cc  upnp_mediacapture_pcm.cpp  upnp_mediacapture_pcm.h  upnp_ondemand_ccm.cc  upnp_ondemand_ccm.cpp  upnp_ondemand_ccm.h  upnp_ppm.cc  (+13 more)
tests/: CMakeLists.txt  Makefile.am  communication1_test.cc  communication_managers_test.cc  device_class_description000.xml  device_class_description_test.cc  device_class_description_test.cpp  device_description000.xml  fake_child_helper.cc  fake_child_helper.cpp  fake_parent_helper.cc  fake_parent_helper.cpp  fsmda_profiling.sh  fsmda_profiling_batch.sh  named_semaphore_helper.cc  named_semaphore_helper.h  pairing_as_child_test.cc  pairing_as_child_test.cpp  pairing_as_parent_test.cc  pairing_as_parent_test.cpp  pairing_manager_test.cc  pairing_managers_test.cc  paring1_test.cc  paring2_test.cc  paring_manager_test.cc  release_fake_child_parent.sh  release_gtest.sh  simple_test.cc  test0.cc  test0.cpp  test1.cc  test1.cpp  test2.cc  test2.cpp  test3.cc  testsuit_gtest.cc  testsuit_gtest.cpp  upnp_communication_test.cc  upnp_pairing_as_child_test.cc  upnp_pairing_as_child_test.cpp  (+10 more)
tests/files/: active_class_desc00.xml  active_dev_desc00.xml  html_class_desc00.xml  html_dev_desc00.xml  mediacapture_class_desc00.xml  mediacapture_dev_desc00.xml  ondemand_class_desc00.xml  ondemand_dev_desc00.xml  passive_class_desc00.xml  passive_dev_desc00.xml  test1_active_dev_desc00.xml  test1_html_class_desc00.xml  test1_html_dev_desc00.xml  test1_mediacapture_class_desc00.xml  test1_mediacapture_dev_desc00.xml  test1_ondemand_class_desc00.xml  test1_ondemand_dev_desc00.xml  test1_passive_class_desc00.xml  test1_passive_dev_desc00.xml
tests/gtest/: README.md
(+114 files in other folders)
