SUBDIRS=src examples tests

DISTCLEANFILES =\
  build-aux/libtool.m4\
  build-aux/ltmain.sh\
  build-aux/ltoptions.m4\
  build-aux/ltsugar.m4\
  build-aux/ltversion.m4\
  build-aux/lt~obsolete.m4\
  build-aux/ar-lib\
  build-aux/compile\
  build-aux/config.guess\
  build-aux/config.sub\
  build-aux/depcomp\
  build-aux/install-sh\
  build-aux/missing\
  config.h.in\
  configure\
  test-driver\
  TAGS\
  aclocal.m4\
  configure\
  stamp-h1\
  Makefile\
  Makefile.in\
  libtool\
  vgcore.*\
  ar-lib\
  compile\
  depcomp\
  install-sh\
  ltmain.sh\
  missing\
  $(NULL)
