# Programs
bin_PROGRAMS=e0_example e1_example

# Programs sources 
e0_example_SOURCES= example0.cpp 

# Programs compiler options
e0_example_CPPFLAGS = $(PLATINUMKIT_CFLAGS)

# Programs linker options
e0_example_LDFLAGS = $(top_srcdir)/src/libfsmda.la $(PLATINUMKIT_LIBS)

# Programs sources 
e1_example_SOURCES= example1.cpp 

# Programs compiler options
e1_example_CPPFLAGS = $(PLATINUMKIT_CFLAGS)

# Programs linker options
e1_example_LDFLAGS = $(top_srcdir)/src/libfsmda.la $(PLATINUMKIT_LIBS)